# signal_propagation

./: README.md
calsipro/: pyproject.toml
calsipro/src/calsipro/: analysis.py  cli.py  io.py  organoid_database.py  peak_calling.py  visualisations.py
calsiprovis/: pyproject.toml
calsiprovis/src/calsiprovis/: app.py  bokeh_helpers.py  cli.py  experiment.py  frontend.py  library.py
calsiprovis/src/calsiprovis/widgets/: bokeh_plot.py  main.py  origin_widget.py  pre_main.py  select.py  single_view.py  single_view_selector.py
hoernchen/: README.md  pyproject.toml
hoernchen/src/hoernchen/: __init__.py  store.py
hoernchen/test/: test_store.py
rapids/: README.md  pyproject.toml
rapids/src/rapids/: backend.py  js.py  util.py  widgets.py
rapids/src/rapids/socket/: backend.py  browser.py
rapids/testapp/: pyproject.toml
rapids/testapp/src/testapp/: app_main.py  library.py  main.py  widgets.py
runnel/: README.md  pyproject.toml
runnel/src/runnel/: cli.py  stage0.py
runnel/src/runnel/pyodide/: repodata.json
runnel/src/runnel/templates/: index.html
runnel/test/simple_test/: pyproject.toml  simple_test.py
