[project]
name = "calsipro"
version ="0.16.0"
authors = [{name = "Simon Haendeler", email="opensource@haend.de"}]
description = "Calcium Signal Propagation Speed Analysis Library"
dependencies = [
    "aicsimageio>=4.11.0",
    "bokeh>=3.1.1",
    "click>=8.1.8",
    "datashader>=0.15.2",
    "ffmpeg>=1.4",
    "numba>=0.58.1",
    "numpy>=1.24.4",
    "openpyxl>=3.1.5",
    "pillow>=10.4.0",
    "polars>=1.8.2",
    "pywavelets>=1.4.1",
    "scipy>=1.10.1",
]
requires-python = ">=3.8,<3.12"

[project.scripts]
calsipro = "calsipro.cli:cli"

[tool.ruff]
line-length = 120

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
