[project]
name = "calsiprovis"
version = "0.18.0"
description = ""
authors = [{name = "Simon Haendeler", email="opensource@haend.de"}]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "click ~= 8.1.3",
    "polars ~= 1.8.2",
    "zstandard ~= 0.20.0",
    "imageio ~= 2.27.0",
    "calsipro == 0.17.0",
    "rapids == 0.5.0",
    "runnel == 1.3.0",
    "hoernchen == 0.6.1",
]

[project.scripts]
calsiprovis = 'calsiprovis.cli:cli'

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
calsipro = {path  = "../calsipro"}
hoernchen = {path = "../hoernchen"}
rapids = {path = "../rapids"}
runnel = {path ="../runnel"}
