[tool.poetry]
name = "rapids"
version = "0.4.13"
description = ""
authors = ["syntonym <syntaar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
flask = "^2.2.3"
websockets = "^10.4"

[[tool.poetry.source]]
name = "syntonym"
url = "http://localhost:8080/"
default = false
secondary = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
