[tool.poetry]
name = "runnel"
version = "1.2.2"
description = ""
authors = ["syntonym <syntaar@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
runnel = 'runnel.cli:run'

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
flask = "^2.2.3"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
