[project]
name = "runnel"
version = "1.3.0"
description = ""
authors = [{name = "Simon Haendeler", email="opensource@haend.de"}]
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
    "click ~= 8.1.3",
    "flask ~= 2.2.3",
    "gunicorn ~= 20.1.0",
]

[project.scripts]
runnel = 'runnel.cli:run'

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
